[package]
name = "waveprobe"
authors = ["Patryk Cieszkowski <patryk@cieszkow.ski>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.10.2"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
