[package]
name = "waveprobe-server"
authors = ["Patryk Cieszkowski <patryk@cieszkow.ski>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
dotenv = "0.15.0"
regex = "1.10.2"
rumqttc = "0.23.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["process", "rt-multi-thread", "macros"] }
